force-app/main/default/objects/Contact/fields/Emergency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Name__c</fullName>
    <description>Name of emergency contact person</description>
    <label>Emergency Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>