force-app/main/default/objects/Contact/fields/Emergency_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Phone__c</fullName>
    <description>Phone number for emergency contact</description>
    <label>Emergency Contact Phone</label>
    <type>Phone</type>
</CustomField>