force-app/main/default/objects/Contact/fields/Guardian_Email__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Email__c</fullName>
    <description
  >Email address for parent or guardian (for minor players)</description>
    <label>Guardian Email</label>
    <type>Email</type>
</CustomField>