force-app/main/default/objects/Contact/fields/Hockey_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Hockey_Registration_Number__c</fullName>
    <description
  >Official hockey registration number from Hockey Canada or USA Hockey</description>
    <externalId>true</externalId>
    <label>Hockey Registration Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>