force-app/main/default/objects/Contact/fields/Medical_Notes__c.field-meta.xml
<CustomField>
    <fullName>Medical_Notes__c</fullName>
    <description
  >Medical conditions, allergies, or other health information coaches should be aware of</description>
    <label>Medical Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>