force-app/main/default/objects/Contact/fields/Player_ID__c.field-meta.xml
<CustomField>
    <fullName>Player_ID__c</fullName>
    <description
  >Unique identifier for the player across all leagues and seasons</description>
    <externalId>true</externalId>
    <label>Player ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>