force-app/main/default/objects/Contact/validationRules/Date_of_Birth_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Birth_Not_Future</fullName>
    <active>true</active>
    <description>Ensures date of birth is not in the future</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Date_of_Birth__c)),
    Date_of_Birth__c &gt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Date of birth cannot be in the future.</errorMessage>
</ValidationRule>