force-app/main/default/objects/Contact/validationRules/Valid_Jersey_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Jersey_Number</fullName>
    <active>true</active>
    <description>Ensures jersey number is between 0 and 99</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Jersey_Number__c)),
    OR(
        Jersey_Number__c &lt; 0,
        Jersey_Number__c &gt; 99
    )
)</errorConditionFormula>
    <errorDisplayField>Jersey_Number__c</errorDisplayField>
    <errorMessage>Jersey number must be between 0 and 99.</errorMessage>
</ValidationRule>